2012-02-23 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  More efficient access to two-byte variables near the stack pointer for r2k, fix a bug when fetching 1-byte variables.

2012-02-23 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  src/z80/peeph-z80.def:
	  More efficient access to two-byte variables near the stack pointer.
	* support/regression/tests/gcc-torture-execute-pr42833.c:
	  Disable test for even more gcc versions.

2012-02-22 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCmain.c,
	  device/*,
	  support/regression/*:
	  sdcc macro mess cleanup, fix #3490776.

2012-02-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/bug2935162.c,
	* device/include/limits.h: changed constants to be compatible with
	  both C89 and C99 integer constant type rules
	* src/SDCCval.c (constVal): fixed bug #3489899
	* src/mcs51/peeph.def: don't tail call optimize longjmp()
	* src/SDCCsymt.c (addSymChain): fixed bug #3489870

2012-02-21 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* device/include/setjmp.h,
	  support/regression/tests/setjmp.c,
	  device/lib/_setjmp.c:
	  Rename HIDE_LONGJMP to __SDCC_HIDE_LONGJMP for standard compliance, enable setjmp/longjmp for z180 and r2k.

2012-02-21 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c (cseBBlock): fixed bug #3482753
	* support/regression/tests/bug3482753.c: new

2012-02-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.h,
	  src/SDCCast.h,
	  src/SDCCast.c (decorateType, processParms, checkPtrCast, copyAstValues):
	  fixed bug #3438706

2012-02-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/gcc-torture-execute-pr39339.c:
	  Fixed bug #3486544.

2012-02-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/gcc-torture-execute-pr43236.c,