@@ -1,3 +1,7 @@
+2012-02-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCast.c (createDo): fixed bug #3489326
+
 2012-02-23 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/z80/gen.c:
